<resources>
    <string name="app_name">SBA PECTAA 2025</string>
    <string name="sign_in">Sign in</string>
    <string name="tap_to_scan">Tap below to scan</string>
    <string name="pec_qr_scanner">PECTAA SBA 2025–26 QR Scanner</string>
    <string name="pec_sba_qr_scanner">PECTAA SBA QR Scanner</string>
    <string name="developed_by">Developed by: Rafiq IT Expert</string>
    <string name="helpline">042–99260156</string>
    <string name="mobile">0320–4032668</string>
    <string name="whatsapp">0333–4045115</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="scan_qr_code">Scan QR Code</string>
    <string name="verification_status">Verification Status</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="open_url_title">Open URL</string>
    <string name="open_url_msg">Would you like to open below url?\n\n%s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="demo_url">https://www.google.com</string>
    <string name="invalid_email_address">Email address is invalid</string>
</resources>